# STEM2Crystal-Bench

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  leaderboard.json  pyproject.toml  requirements.txt
assets/: app.js  style.css
configs/: eval.yaml
configs/methods/: diffcsp.yaml  mattergen.yaml  microscopygpt.yaml  sccd.yaml
docs/: add_a_method.md  benchmark.md  installation.md  methods.md  user_guide.md
examples/: example_method.py
scripts/: download_benchmark.py  download_models.py  evaluate.py  generate.py  plot_comparison.py
stem2crystal/: __init__.py
stem2crystal/eval/: __init__.py  evaluate.py  metrics.py
stem2crystal/eval/_reference/: assemble_master.py  eval5v2_metrics.py  eval_extra.py
stem2crystal/methods/: __init__.py  base.py  diffcsp.py  mattergen.py  microscopygpt.py  sccd.py
stem2crystal/methods/_microscopygpt_impl/: README.md  finetune.py  generate.py
stem2crystal/methods/_sccd_impl/: README.md  build_split.py  gen_real5v2_diffusion.py  gen_sccd_v5.py  train_diffcsp2d.py  train_phase1_evidence.py  train_phase3_f2_guarded.py  train_sccd_v5_ddp.py  train_sccd_v5_film.py
